@@ -1,17 +1,21 @@
-sample.data.frame <- function (x, size, replace = FALSE, prob = NULL, ...){
+setMethod("sample", "data.frame", function (x, size, replace = FALSE, prob = NULL){
     if (missing(size))
         size <- nrow(x)
-    x[.Internal(sample(nrow(x), size, replace, prob)),,drop=FALSE]
-}
+    ii <- .Internal(sample(nrow(x), size, replace, prob))
+    x[ii,,drop=FALSE]
+})
 
-sample.data.set <- function (x, size, replace = FALSE, prob = NULL, ...){
+setMethod("sample", "data.set", function (x, size, replace = FALSE, prob = NULL){
     if (missing(size))
         size <- nrow(x)
-    x[.Internal(sample(nrow(x), size, replace, prob)),,drop=FALSE]
-}
+    ii <- .Internal(sample(nrow(x), size, replace, prob))
+    x[ii,,drop=FALSE]
+})
 
-sample.importer <- function (x, size, replace = FALSE, prob = NULL, ...){
+setMethod("sample", "importer", function (x, size, replace = FALSE, prob = NULL){
     if (missing(size))
         size <- nrow(x)
-    x[.Internal(sample(nrow(x), size, replace, prob)),,drop=FALSE]
-}
+    ii <- .Internal(sample(nrow(x), size, replace, prob))
+    x[ii,,drop=FALSE]
+})
+
